# python-automation-and-tools

./: .gitignore  README.md
.github/workflows/: auto_cleanup_ci.yml  band_name_generator_ci.yml  csv_cleaner_ci.yml  python_auto_file_organizer_ci.yml  tip_calculator_ci.yml  treasure_island_ci.yml
band-name-generator/: README.MD  band_name_generator.py
band-name-generator/tests/: test_band_name_generator.py
csv-cleaner/: README.MD  cleaner.py  pyproject.toml  requirements.txt
csv-cleaner/samples/: sample_data1_cleaned.csv
csv-cleaner/samples/input/: sample_data1.csv
csv-cleaner/samples/input/output/: sample_data1_pretty.txt
csv-cleaner/samples/output/: sample_data1_cleaned.csv  sample_data1_pretty.txt  sample_data2_pretty.txt
csv-cleaner/src/: cleaner.py
csv-cleaner/tests/: test_cleaner.py
name-formatter/: README.md
python-auto-file-organizer/: README.MD  auto_cleanup.py
test_scripts/: test.py
tip_calculator/: README.MD  app.py  calculator.py
tip_calculator/static/: style.css
tip_calculator/templates/: index.html
tip_calculator/tests/: test_calculator.py
treasure_island/: README.MD  treasure.py
treasure_island/tests/: test_treasure.py
web-scraper/: README.MD
