[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-cleaner"
version = "0.1.0"
description = "A CLI tool for cleaning and preprocessing CSV files."
authors = [
  { name = "Johan Lijffijt" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0"
]

[project.scripts]
csvcleaner = "src.cleaner:main"
